[package]
name = "ssb-keyfile"
version = "0.2.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Keyfile operations for ssb."
repository = "https://github.com/AljoschaMeyer/ssb-keyfile-rs"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
ssb-crypto = { version = "~0.1.4", git = "https://github.com/leo-lb/ssb-crypto" }
snafu = "0.6.2"
base64 = "0.11.0"
